<resources>
    <string name="app_name">CombatCreatures</string>
    <string name="splashDescription">Creature Combat splash screen</string>
    <string name="newGame">NEW GAME</string>
    <string name="settings">SETTINGS</string>
    <string name="credits">CREDITS</string>
    <string name="logoDescription">Combat Creatures logo</string>
    <string name="Eng_River">River</string>
    <string name="Eng_Sputnik">Sputnik</string>
    <string name="Eng_Lion">Lion</string>
    <string name="Eng_Rock">Rock</string>
    <string name="Eng_Cat">Cat</string>
    <string name="Eng_Baguette">Baguette</string>
    <string name="Eng_Star">Star</string>
    <string name="Eng_Tako">Tako</string>
    <string name="Eng_Monkey">Monkey</string>
    <string name="Eng_Fight">Fight</string>
    <string name="startButtonText">Press to Start!</string>
    <string name="selectText">Select Your Creature</string>
    <string name="creditsText">CREDITS</string>
    <string name="lightAttack">Light Attack</string>
    <string name="heavyAttack">Heavy attack</string>
    <string name="thanksText">and now you know who\'s responsible</string>
    <string name="victoryText">Congratulations, A winner is you!</string>
    <string name="music">MUSIC AND SOUND EFFECTS</string>
</resources>